# CompetitiveProgramming

./: .gitignore  630.1.DoubleLetter.cpp  630.Egalitarianism.cpp  631.1.TaroGrid.cpp  631.3.TaroCoins.cpp  631.3.cpp  633.cpp  635.cpp  636.cpp  638.cpp  AddMultiply.cpp  BishopMove.cpp  BracketExpressions.cpp  BubbleSortWithReversals.cpp  BuildingHEightsEasy.cpp  HappyLetterDiv2.cpp  ManySquares.cpp  NegativeGraphDiv2.cpp  README.md  SumOfPower.cpp  contest.cpp
Casual/: fibonacci.cpp  max_diff.py  to_many.py  to_many_parenthesis.py
CodeChef/: c4.cpp  f1.cpp  n1.cpp  nicequad.cpp  omax.cpp  tabus.cpp  tabus2.cpp  tr1.cpp  trip.cpp
CodeForces/: 453E.cpp  454A.cpp  454B.cpp
ProjectEuler/: 111.py  357.py  bounds.py  combinations.py  patterns.py  permutations.py  permutations_with_repetitions.py
SPOJ/: CMakeLists.txt  ProblemList.md  aba12c.cpp  abcd.cpp  abcpath.cpp  absys.cpp  acmaker.cpp  acode.cpp  acpc10a.cpp  acpc10d.cpp  acpc11b.cpp  acquire.cpp  activ.cpp  adacity.cpp  adaindex.cpp  adalist.cpp  adapath.cpp  adaqueue.cpp  adfruits.cpp  ae00.cpp  ae2a.cpp  aggrcow.cpp  aibohp.cpp  akvqld03.cpp  alicecub.cpp  all.cpp  altseq.cpp  amble.cpp  amr10g.cpp  amr11a.cpp  anarc05b.cpp  anarc05h.cpp  anarc07g.cpp  anarc08e.cpp  anarc09a.cpp  anarc09f.cpp  anttt.cpp  apio10a.cpp  ar2015pc.cpp  arith.py  (+106 more)
SPOJ/CMEXPR/: in.txt  main.c  main_old.c  out.txt  t.c
SPOJ/DIRVS/: lec11.ppt  main.c
SPOJ/DIRVS/sol/: check_res.py  my.c  out1.txt  out2.txt
TopCoderSRM/: 630.2.Egalitarianism.cpp  631.2.CatsOnTheLineDiv2.cpp  633.cpp  634.cpp  637.cpp  CostOfDancing.cpp  contest.cpp  (+5 more)
(+137 files in other folders)
